# gen_ai_sentinel

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements.txt
agent/: README.md
bigquery/: README.md
data-generator/: README.md  generate.py
data-generator/scenarios/: north-gas-leak.yaml
docs/: data-model.md  demo-script.md  requirements.md  responsible-ai.md  roadmap.md
functions/: README.md
infra/: README.md
rag/: README.md
rag/protocols/: hazmat-response-sop.md  medical-response-standards.md  public-alert-criteria.md  resource-allocation.md
scripts/: load_bigquery.py  validate_api.py  validate_local.py  validate_phase2.py
sentinel/: __init__.py  actions.py  anomaly.py  clustering.py  config.py  db.py  escalation.py  forecast.py  llm.py  qa.py  rag.py  recommend.py
services/api/: README.md  main.py
services/web/: .env.local.example  Dockerfile  README.md  package-lock.json  package.json
services/web/app/: globals.css  layout.js  page.js
services/web/app/api/[...path]/: route.js
services/web/lib/: api.js
