[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "SENTINEL — Public Safety Decision Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
gemini = ["google-genai>=0.3.0"]
bigquery = ["google-cloud-bigquery>=3.20.0", "pyarrow>=15.0.0"]

[tool.setuptools.packages.find]
include = ["sentinel*"]
